[tool.poetry]
name = "appengine-tasks-runner"
version = "0.1.0"
description = "Cloud Tasks long-running jobs runner on App Engine."
authors = ["Yurii Serhiichuk <savik.ne[at]gmail.com>"]
readme = "README.md"
packages = [{ include = "appengine_tasks_runner" }]

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "0.88.0"
uvicorn = { version = "0.20.0", extras = ["standard"] }
pydantic = "1.10.4"
requests = "2.28.1"
google-auth = "2.15.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.21.0"
pytest = "7.2.0"
coverage = "7.0.3"
pytest-cov = "4.0.0"
pytest-unordered = "0.5.2"
types-requests = "2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
