[tool.poetry]
name = "appengine-tasks-runner"
version = "0.1.0"
description = "Cloud Tasks long-running jobs runner on App Engine."
authors = ["Yurii Serhiichuk <savik.ne[at]gmail.com>"]
readme = "README.md"
packages = [{ include = "appengine_tasks_runner" }]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "0.103.1"
uvicorn = { version = "0.23.2", extras = ["standard"] }
pydantic = "1.10.12"
requests = "2.31.0"
google-auth = "2.22.0"
google-cloud-secret-manager = "2.16.3"

[tool.poetry.dev-dependencies]
pre-commit = "3.4.0"
pytest = "7.4.2"
coverage = "7.3.1"
pytest-cov = "4.1.0"
pytest-unordered = "0.5.2"
types-requests = "2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 98
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
